// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ButtonLink Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Link buttons have a similar look as classic links, but the area surrounding them is clickable. That makes them great to use outside of paragraphs or for less important actions in the interface. We use Link buttons only in a small and normal version.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="ButtonLink__StyledButtonLink-eyUiPe gIxBvN"
            href="https://kiwi.com"
            onClick={undefined}
            size="normal"
            target={undefined}
          >
            ButtonLink
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ButtonLink
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        ButtonLink
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        ButtonLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonLink Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Link buttons have a similar look as classic links, but the area surrounding them is clickable. That makes them great to use outside of paragraphs or for less important actions in the interface. We use Link buttons only in a small and normal version.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <button
            className="ButtonLink__StyledButtonLink-eyUiPe edfPGl"
            disabled={false}
            href=""
            onClick={[Function]}
            size="large"
            target={undefined}
          >
            <div
              className="ButtonLink__IconContainer-flENJD fktYwF"
              size="large"
              theme={
                Object {
                  "orbit": Object {
                    "backgroundAlertCritical": "#fae8e8",
                    "backgroundAlertInfo": "#e0f6ff",
                    "backgroundAlertSuccess": "#e7f3e8",
                    "backgroundAlertWarning": "#fcf1cd",
                    "backgroundBody": "#f5f7f9",
                    "backgroundButtonBordered": "transparent",
                    "backgroundButtonBorderedActive": "#fff",
                    "backgroundButtonBorderedHover": "#f5f7f9",
                    "backgroundButtonCritical": "#d21c1c",
                    "backgroundButtonCriticalActive": "#b21717",
                    "backgroundButtonCriticalHover": "#bd1919",
                    "backgroundButtonFacebook": "#3b5998",
                    "backgroundButtonFacebookActive": "#354f88",
                    "backgroundButtonFacebookHover": "#385490",
                    "backgroundButtonGoogle": "#f5f7f9",
                    "backgroundButtonGoogleActive": "#d6dee6",
                    "backgroundButtonGoogleHover": "#e5eaef",
                    "backgroundButtonInfo": "#0176D2",
                    "backgroundButtonInfoActive": "#0064b2",
                    "backgroundButtonInfoHover": "#006abd",
                    "backgroundButtonLinkPrimary": "transparent",
                    "backgroundButtonLinkPrimaryActive": "#d6dee6",
                    "backgroundButtonLinkPrimaryHover": "#e5eaef",
                    "backgroundButtonLinkSecondary": "transparent",
                    "backgroundButtonLinkSecondaryActive": "#d6dee6",
                    "backgroundButtonLinkSecondaryHover": "#e5eaef",
                    "backgroundButtonPrimary": "#00a991",
                    "backgroundButtonPrimaryActive": "#008f7b",
                    "backgroundButtonPrimaryHover": "#009882",
                    "backgroundButtonSecondary": "#e8edf1",
                    "backgroundButtonSecondaryActive": "#cad5df",
                    "backgroundButtonSecondaryHover": "#d9e1e8",
                    "backgroundButtonSuccess": "#46B655",
                    "backgroundButtonSuccessActive": "#3fa34c",
                    "backgroundButtonSuccessHover": "#42ac50",
                    "backgroundButtonWarning": "#f9971e",
                    "backgroundButtonWarningActive": "#e68206",
                    "backgroundButtonWarningHover": "#f48a06",
                    "backgroundCard": "#fff",
                    "backgroundCarrierLogo": "transparent",
                    "backgroundInput": "#fff",
                    "backgroundInputDisabled": "#e8edf1",
                    "backgroundModal": "#fff",
                    "borderColorButtonCriticalBordered": "#d21c1c",
                    "borderColorButtonCriticalBorderedActive": "#b21717",
                    "borderColorButtonCriticalBorderedHover": "#bd1919",
                    "borderColorButtonFacebookBordered": "#3b5998",
                    "borderColorButtonFacebookBorderedActive": "#354f88",
                    "borderColorButtonFacebookBorderedHover": "#385490",
                    "borderColorButtonGoogleBordered": "#46515e",
                    "borderColorButtonGoogleBorderedActive": "#38404b",
                    "borderColorButtonGoogleBorderedHover": "#3f4854",
                    "borderColorButtonInfoBordered": "#0176D2",
                    "borderColorButtonInfoBorderedActive": "#0064b2",
                    "borderColorButtonInfoBorderedHover": "#006abd",
                    "borderColorButtonPrimaryBordered": "#00a991",
                    "borderColorButtonPrimaryBorderedActive": "#008f7b",
                    "borderColorButtonPrimaryBorderedHover": "#009882",
                    "borderColorButtonSecondaryBordered": "#46515e",
                    "borderColorButtonSecondaryBorderedActive": "#38404b",
                    "borderColorButtonSecondaryBorderedHover": "#3f4854",
                    "borderColorButtonSuccessBordered": "#46B655",
                    "borderColorButtonSuccessBorderedActive": "#3fa34c",
                    "borderColorButtonSuccessBorderedHover": "#42ac50",
                    "borderColorButtonWarningBordered": "#f9971e",
                    "borderColorButtonWarningBorderedActive": "#e68206",
                    "borderColorButtonWarningBorderedHover": "#f48a06",
                    "borderColorCard": "#e8edf1",
                    "borderColorInput": "#bac7d5",
                    "borderColorInputActive": "#94a8be",
                    "borderColorInputError": "#d21c1c",
                    "borderColorInputErrorFocus": "#d21c1c",
                    "borderColorInputFocus": "#0176D2",
                    "borderColorInputHover": "#a6b6c8",
                    "borderColorModal": "#e8edf1",
                    "borderColorTableCell": "#bac7d5",
                    "borderRadiusCircle": "50%",
                    "borderRadiusLarge": "6px",
                    "borderRadiusNormal": "3px",
                    "borderRadiusSmall": "2px",
                    "borderStyleCard": "solid",
                    "borderStyleInput": "solid",
                    "borderWidthCard": "1px",
                    "borderWidthInput": "1px",
                    "boxShadowInputErrorFocus": "0px 0px 3px 1px rgba(210,28,28,0.3)",
                    "boxShadowInputFocus": "0px 0px 3px 1px rgba(1,118,210,0.3)",
                    "colorAlertIconCritical": "#d21c1c",
                    "colorAlertIconInfo": "#0176D2",
                    "colorAlertIconSuccess": "#46B655",
                    "colorAlertIconWarning": "#f9971e",
                    "colorHeading": "#171b1e",
                    "colorHeadingInverted": "#fff",
                    "colorIconAttention": "#171b1e",
                    "colorIconCheckbox": "#00a991",
                    "colorIconCheckboxDisabled": "#bac7d5",
                    "colorIconInput": "#bac7d5",
                    "colorIconPrimary": "#46515e",
                    "colorIconRadioButton": "#00a991",
                    "colorIconRadioButtonDisabled": "#bac7d5",
                    "colorIconSecondary": "#7f91a8",
                    "colorIconTerciary": "#bac7d5",
                    "colorLabelForm": "#46515e",
                    "colorLabelFormFilled": "#7f91a8",
                    "colorPlaceholderInput": "#bac7d5",
                    "colorTextAlertCritical": "#650808",
                    "colorTextAlertInfo": "#07405c",
                    "colorTextAlertSuccess": "#065d12",
                    "colorTextAlertWarning": "#a93610",
                    "colorTextAttention": "#171b1e",
                    "colorTextButtonCritical": "#fff",
                    "colorTextButtonCriticalActive": "#fff",
                    "colorTextButtonCriticalBordered": "#d21c1c",
                    "colorTextButtonCriticalBorderedActive": "#b21717",
                    "colorTextButtonCriticalBorderedHover": "#bd1919",
                    "colorTextButtonCriticalHover": "#fff",
                    "colorTextButtonFacebook": "#fff",
                    "colorTextButtonFacebookActive": "#fff",
                    "colorTextButtonFacebookBordered": "#3b5998",
                    "colorTextButtonFacebookBorderedActive": "#354f88",
                    "colorTextButtonFacebookBorderedHover": "#385490",
                    "colorTextButtonFacebookHover": "#fff",
                    "colorTextButtonFilled": "#fff",
                    "colorTextButtonFilledActive": "#fff",
                    "colorTextButtonFilledHover": "#fff",
                    "colorTextButtonGoogle": "#46515e",
                    "colorTextButtonGoogleActive": "#38404b",
                    "colorTextButtonGoogleBordered": "#46515e",
                    "colorTextButtonGoogleBorderedActive": "#38404b",
                    "colorTextButtonGoogleBorderedHover": "#3f4854",
                    "colorTextButtonGoogleHover": "#3f4854",
                    "colorTextButtonInfo": "#fff",
                    "colorTextButtonInfoActive": "#fff",
                    "colorTextButtonInfoBordered": "#0176D2",
                    "colorTextButtonInfoBorderedActive": "#0064b2",
                    "colorTextButtonInfoBorderedHover": "#006abd",
                    "colorTextButtonInfoHover": "#fff",
                    "colorTextButtonLinkPrimary": "#00a991",
                    "colorTextButtonLinkPrimaryActive": "#008f7b",
                    "colorTextButtonLinkPrimaryHover": "#009882",
                    "colorTextButtonLinkSecondary": "#46515e",
                    "colorTextButtonLinkSecondaryActive": "#38404b",
                    "colorTextButtonLinkSecondaryHover": "#3f4854",
                    "colorTextButtonPrimary": "#fff",
                    "colorTextButtonPrimaryActive": "#fff",
                    "colorTextButtonPrimaryBordered": "#00a991",
                    "colorTextButtonPrimaryBorderedActive": "#008f7b",
                    "colorTextButtonPrimaryBorderedHover": "#009882",
                    "colorTextButtonPrimaryHover": "#fff",
                    "colorTextButtonSecondary": "#46515e",
                    "colorTextButtonSecondaryActive": "#38404b",
                    "colorTextButtonSecondaryBordered": "#46515e",
                    "colorTextButtonSecondaryBorderedActive": "#38404b",
                    "colorTextButtonSecondaryBorderedHover": "#3f4854",
                    "colorTextButtonSecondaryHover": "#3f4854",
                    "colorTextButtonSuccess": "#fff",
                    "colorTextButtonSuccessActive": "#fff",
                    "colorTextButtonSuccessBordered": "#46B655",
                    "colorTextButtonSuccessBorderedActive": "#3fa34c",
                    "colorTextButtonSuccessBorderedHover": "#42ac50",
                    "colorTextButtonSuccessHover": "#fff",
                    "colorTextButtonWarning": "#fff",
                    "colorTextButtonWarningActive": "#fff",
                    "colorTextButtonWarningBordered": "#f9971e",
                    "colorTextButtonWarningBorderedActive": "#e68206",
                    "colorTextButtonWarningBorderedHover": "#f48a06",
                    "colorTextButtonWarningHover": "#fff",
                    "colorTextError": "#d21c1c",
                    "colorTextInfo": "#0176D2",
                    "colorTextInput": "#46515e",
                    "colorTextInputDisabled": "#bac7d5",
                    "colorTextLinkPrimary": "#00a991",
                    "colorTextLinkPrimaryHover": "#00a991",
                    "colorTextLinkSecondary": "#171b1e",
                    "colorTextLinkSecondaryHover": "#00a991",
                    "colorTextPrimary": "#46515e",
                    "colorTextSecondary": "#7f91a8",
                    "durationFast": "0.2s",
                    "durationNormal": "0.3s",
                    "durationSlow": "0.4s",
                    "fontFamily": "\\"Roboto\\", -apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", \\"Segoe UI\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", sans-serif",
                    "fontSizeButtonLarge": "16px",
                    "fontSizeButtonNormal": "14px",
                    "fontSizeButtonSmall": "12px",
                    "fontSizeHeadingDisplay": "40px",
                    "fontSizeHeadingTitle1": "28px",
                    "fontSizeHeadingTitle2": "22px",
                    "fontSizeHeadingTitle3": "16px",
                    "fontSizeInputNormal": "16px",
                    "fontSizeInputSmall": "14px",
                    "fontSizeLabelForm": "14px",
                    "fontSizeMessage": "14px",
                    "fontSizeMessageForm": "12px",
                    "fontSizeTextLarge": "16px",
                    "fontSizeTextNormal": "14px",
                    "fontSizeTextSmall": "12px",
                    "fontWeightBold": "700",
                    "fontWeightHeadingDisplay": "700",
                    "fontWeightHeadingTitle1": "700",
                    "fontWeightHeadingTitle2": "500",
                    "fontWeightHeadingTitle3": "500",
                    "fontWeightLinks": "500",
                    "fontWeightMedium": "500",
                    "fontWeightNormal": "400",
                    "heightButtonLarge": "52px",
                    "heightButtonNormal": "44px",
                    "heightButtonSmall": "32px",
                    "heightCheckbox": "20px",
                    "heightCountryFlag": "20px",
                    "heightIconLarge": "32px",
                    "heightIconMedium": "24px",
                    "heightIconSmall": "16px",
                    "heightInputLarge": "52px",
                    "heightInputNormal": "44px",
                    "heightInputSmall": "32px",
                    "heightRadioButton": "20px",
                    "lineHeightHeading": "1.2",
                    "lineHeightText": "1.4",
                    "marginButtonIconLarge": "16px",
                    "marginButtonIconNormal": "12px",
                    "marginButtonIconSmall": "8px",
                    "modifierScaleButtonActive": 0.9,
                    "opacityButtonDisabled": "0.3",
                    "opacityCheckboxDisabled": "0.5",
                    "opacityOverlay": "0.8",
                    "opacityRadioButtonDisabled": "0.5",
                    "paddingAlert": "16px",
                    "paddingAlertWithIcon": "12px",
                    "paddingButtonLarge": "28px",
                    "paddingButtonLargeWithIcon": "12px",
                    "paddingButtonNormal": "16px",
                    "paddingButtonNormalWithIcon": "8px",
                    "paddingButtonSmall": "12px",
                    "paddingButtonSmallWithIcon": "8px",
                    "paddingInputNormal": "16px",
                    "paddingInputSmall": "12px",
                    "paletteBlueDark": "#07405c",
                    "paletteBlueLight": "#e0f6ff",
                    "paletteBlueLightActive": "#b0e8fe",
                    "paletteBlueLightHover": "#c8effe",
                    "paletteBlueNormal": "#0176D2",
                    "paletteBlueNormalActive": "#0064b2",
                    "paletteBlueNormalHover": "#006abd",
                    "paletteCloudLight": "#f5f7f9",
                    "paletteCloudLightActive": "#d6dee6",
                    "paletteCloudLightHover": "#e5eaef",
                    "paletteCloudNormal": "#e8edf1",
                    "paletteCloudNormalActive": "#cad5df",
                    "paletteCloudNormalHover": "#d9e1e8",
                    "paletteGreenDark": "#065d12",
                    "paletteGreenLight": "#e7f3e8",
                    "paletteGreenLightActive": "#c7e3c9",
                    "paletteGreenLightHover": "#d7ebd8",
                    "paletteGreenNormal": "#46B655",
                    "paletteGreenNormalActive": "#3fa34c",
                    "paletteGreenNormalHover": "#42ac50",
                    "paletteInkDark": "#171b1e",
                    "paletteInkLight": "#7f91a8",
                    "paletteInkLightActive": "#5f738c",
                    "paletteInkLightHover": "#6d819c",
                    "paletteInkLighter": "#bac7d5",
                    "paletteInkLighterActive": "#94a8be",
                    "paletteInkLighterHover": "#a6b6c8",
                    "paletteInkNormal": "#46515e",
                    "paletteInkNormalActive": "#38404b",
                    "paletteInkNormalHover": "#3f4854",
                    "paletteOrangeDark": "#a93610",
                    "paletteOrangeLight": "#fcf1cd",
                    "paletteOrangeLightActive": "#f9e4a1",
                    "paletteOrangeLightHover": "#faeab7",
                    "paletteOrangeNormal": "#f9971e",
                    "paletteOrangeNormalActive": "#e68206",
                    "paletteOrangeNormalHover": "#f48a06",
                    "paletteProductDark": "#005448",
                    "paletteProductLight": "#9ae5da",
                    "paletteProductLightActive": "#64d7c6",
                    "paletteProductLightHover": "#7fded0",
                    "paletteProductNormal": "#00a991",
                    "paletteProductNormalActive": "#008f7b",
                    "paletteProductNormalHover": "#009882",
                    "paletteRedDark": "#650808",
                    "paletteRedLight": "#fae8e8",
                    "paletteRedLightActive": "#f1c0c0",
                    "paletteRedLightHover": "#f5d4d4",
                    "paletteRedNormal": "#d21c1c",
                    "paletteRedNormalActive": "#b21717",
                    "paletteRedNormalHover": "#bd1919",
                    "paletteSocialFacebook": "#3b5998",
                    "paletteSocialFacebookActive": "#354f88",
                    "paletteSocialFacebookHover": "#385490",
                    "paletteWhite": "#fff",
                    "paletteWhiteActive": "#e5eaef",
                    "paletteWhiteHover": "#f5f7f9",
                    "spaceLarge": "24px",
                    "spaceMedium": "16px",
                    "spaceSmall": "12px",
                    "spaceXLarge": "32px",
                    "spaceXSmall": "8px",
                    "spaceXXLarge": "40px",
                    "spaceXXSmall": "4px",
                    "spaceXXXLarge": "52px",
                    "textDecorationTextLinkPrimary": "none",
                    "textDecorationTextLinkPrimaryHover": "underline",
                    "textDecorationTextLinkSecondary": "underline",
                    "textDecorationTextLinkSecondaryHover": "underline",
                    "widthCheckbox": "20px",
                    "widthCountryFlag": "20px",
                    "widthIconLarge": "32px",
                    "widthIconMedium": "24px",
                    "widthIconSmall": "16px",
                    "widthRadioButton": "20px",
                    "zIndexDefault": "1",
                    "zIndexModal": "825",
                    "zIndexModalOverlay": "800",
                    "zIndexOnTheTop": "900",
                    "zIndexSticky": "100",
                  },
                }
              }
            >
              <svg
                className={undefined}
                fill="currentColor"
                height="24px"
                preserveAspectRatio="xMidYMid meet"
                style={
                  Object {
                    "color": undefined,
                    "verticalAlign": "middle",
                  }
                }
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M17.178 21l-4.104-7.835-4.104 4.104.373 2.612L8.223 21l-1.865-3.358L3 15.777l1.12-1.12 2.611.373 4.104-4.104L3 6.822 4.492 5.33l9.7 2.239 4.105-4.104a1.58 1.58 0 0 1 2.238 0c.62.619.62 1.619 0 2.238l-4.104 4.104 2.239 9.7L17.178 21z"
                />
              </svg>
            </div>
            ButtonLink
          </button>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ButtonLink
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            disabled
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            block
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                secondary
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            size
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                large
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            icon
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Airplane /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onClick
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span>
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked()
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        ButtonLink
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        ButtonLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ButtonLink Secondary 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": 60,
        }
      }
    >
      <div>
        <h1
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Secondary
        </h1>
        
        <span
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <p>
              Link buttons have a similar look as classic links, but the area surrounding them is clickable. That makes them great to use outside of paragraphs or for less important actions in the interface. We use Link buttons only in a small and normal version.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <a
            className="ButtonLink__StyledButtonLink-eyUiPe bhQaph"
            href="https://kiwi.com"
            onClick={undefined}
            size="normal"
            target={undefined}
          >
            ButtonLink
          </a>
        </div>
        <div>
          <div>
            <div>
              
              <div
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  style={
                    Object {
                      "color": "#898d97",
                      "fontSize": 12,
                      "letterSpacing": 2,
                      "textTransform": "uppercase",
                    }
                  }
                >
                  Source
                </h4>
                <pre
                  style={
                    Object {
                      "backgroundColor": "#fafafa",
                      "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                      "fontSize": ".88em",
                      "lineHeight": 1.5,
                      "overflowX": "scroll",
                      "padding": ".5rem",
                    }
                  }
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        ButtonLink
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            href
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                https://kiwi.com
                                "
                              </span>
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            type
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                "
                                secondary
                                "
                              </span>
                            </span>
                          </span>
                          
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &gt;
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 33,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        ButtonLink
                      </span>
                    </div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;/
                        ButtonLink
                        &gt;
                      </span>
                    </div>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
